Need to work on setting up beautifulsoup. something isn't reading

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,76 @@
     "# Create BeautifulSoup object; parse with 'lxml'\n",
     "soup = BeautifulSoup(response.text, 'lxml')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Examine the results, then determine element that contains sought info\n",
+    "# results are returned as an iterable list\n",
+    "results = soup.find_all(\"div\", class_=\"list_text\")\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find latest News Title and Paragraph\n",
+    "# content_title and article_teaser_body\n",
+    "\n",
+    "# Loop through returned results\n",
+    "for result in results:\n",
+    "    # Error handling\n",
+    "    try:\n",
+    "        # Identify and return title of listing\n",
+    "        title = result.find(\"div\", class_='content_title').text\n",
+    "        \n",
+    "#         # Identify and return price of listing\n",
+    "#         price = result.find('h4', class_='price').text\n",
+    "#         # Identify and return link to listing\n",
+    "#         link = result.a['href']\n",
+    "\n",
+    "        # Run only if title, price, and link are available\n",
+    "#         if (title and price and link):\n",
+    "        if (title):\n",
+    "            # Print results\n",
+    "            print('-------------')\n",
+    "            print(title)\n",
+    "#             print(price)\n",
+    "#             print(link)\n",
+    "\n",
+    "            # Dictionary to be inserted as a MongoDB document\n",
+    "#             post = {\n",
+    "#                 'title': title,\n",
+    "#                 'price': price,\n",
+    "#                 'url': link\n",
+    "#             }\n",
+    "\n",
+    "#             collection.insert_one(post)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
