--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "import pymongo"
+    "import pymongo\n",
+    "from splinter import Browser\n",
+    "from webdriver_manager.chrome import ChromeDriverManager"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,80 +38,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 89.0.4389\n",
+      "[WDM] - Get LATEST driver version for 89.0.4389\n",
+      "[WDM] - Driver [/Users/melissa/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# URL of page to be scraped\n",
-    "url = 'https://redplanetscience.com/'\n",
-    "\n",
-    "# Retrieve page with the requests module\n",
-    "response = requests.get(url)\n",
-    "# Create BeautifulSoup object; parse with 'lxml'\n",
-    "soup = BeautifulSoup(response.text, 'lxml')"
+    "# Setup splinter\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to be scraped\n",
+    "# This is not the given website, but I get returns, so I'm working with it for now\n",
+    "url = (\"https://mars.nasa.gov/news\")\n",
+    "  \n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "Mars Now\n",
+      "Now uncocooned from its protective carbon-fiber shield, the helicopter is being readied for its next steps.  \n"
      ]
     }
    ],
    "source": [
-    "# Examine the results, then determine element that contains sought info\n",
-    "# results are returned as an iterable list\n",
-    "results = soup.find_all(\"div\", class_=\"list_text\")\n",
-    "print(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find latest News Title and Paragraph\n",
-    "# content_title and article_teaser_body\n",
+    "# HTML Object\n",
+    "html = browser.html\n",
     "\n",
-    "# Loop through returned results\n",
-    "for result in results:\n",
-    "    # Error handling\n",
-    "    try:\n",
-    "        # Identify and return title of listing\n",
-    "        title = result.find(\"div\", class_='content_title').text\n",
-    "        \n",
-    "#         # Identify and return price of listing\n",
-    "#         price = result.find('h4', class_='price').text\n",
-    "#         # Identify and return link to listing\n",
-    "#         link = result.a['href']\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "        # Run only if title, price, and link are available\n",
-    "#         if (title and price and link):\n",
-    "        if (title):\n",
-    "            # Print results\n",
-    "            print('-------------')\n",
-    "            print(title)\n",
-    "#             print(price)\n",
-    "#             print(link)\n",
     "\n",
-    "            # Dictionary to be inserted as a MongoDB document\n",
-    "#             post = {\n",
-    "#                 'title': title,\n",
-    "#                 'price': price,\n",
-    "#                 'url': link\n",
-    "#             }\n",
+    "# Retrieve the latest element that contains news title and news_paragraph\n",
+    "title = soup.find('div', class_='content_title').text\n",
+    "article_teaser = soup.find('div', class_='article_teaser_body').text\n",
     "\n",
-    "#             collection.insert_one(post)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(e)"
+    "# Display scrapped data \n",
+    "print(title)\n",
+    "print(article_teaser)"
    ]
   },
   {
@@ -125,6 +123,45 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve page with the requests module\n",
+    "response = requests.get(url)\n",
+    "# Create BeautifulSoup object; parse with 'lxml'\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "ResultSet object has no attribute 'text'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-86c2132d3e6b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Ok, there is something wrong above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtitles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'div'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclass_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"content_title\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# article_teaser = soup.find('div', class_=\"article_teaser_body\").text\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtitles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/bs4/element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2159\u001b[0m         \u001b[0;34m\"\"\"Raise a helpful exception to explain a common code fix.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2160\u001b[0m         raise AttributeError(\n\u001b[0;32m-> 2161\u001b[0;31m             \u001b[0;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2162\u001b[0m         )\n",
+      "\u001b[0;31mAttributeError\u001b[0m: ResultSet object has no attribute 'text'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?"
+     ]
+    }
+   ],
+   "source": [
+    "# Ok, there is something wrong above\n",
+    "titles = soup.find_all('div', class_=\"content_title\").text\n",
+    "\n",
+    "# article_teaser = soup.find('div', class_=\"article_teaser_body\").text\n",
+    "print(titles)\n",
+    "# print(article_teaser)"
+   ]
   }
  ],
  "metadata": {
