--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,54 +68,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "# This is not the given website, but I get returns, so I'm working with it for now\n",
-    "url = (\"https://mars.nasa.gov/news\")\n",
-    "  \n",
-    "browser.visit(url)"
+    "news_url = (\"https://redplanetscience.com/#\")\n",
+    "browser.visit(news_url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# HTML Object\n",
+    "html = browser.html\n",
+    "\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mars Now\n",
-      "Now uncocooned from its protective carbon-fiber shield, the helicopter is being readied for its next steps.  \n"
+      "NASA to Broadcast Mars 2020 Perseverance Launch, Prelaunch Activities\n",
+      "Starting July 27, news activities will cover everything from mission engineering and science to returning samples from Mars to, of course, the launch itself.\n"
      ]
     }
    ],
    "source": [
-    "# HTML Object\n",
-    "html = browser.html\n",
-    "\n",
-    "# Parse HTML with Beautiful Soup\n",
-    "soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n",
-    "\n",
     "# Retrieve the latest element that contains news title and news_paragraph\n",
     "title = soup.find('div', class_='content_title').text\n",
     "article_teaser = soup.find('div', class_='article_teaser_body').text\n",
     "\n",
     "# Display scrapped data \n",
     "print(title)\n",
-    "print(article_teaser)"
+    "print(article_teaser)\n",
+    "\n",
+    "# I think my issue was using find_all and .text together incorrectly and also not having the splinter set up.\n",
+    "# I'm still unsure about how it all relates and why it won't work without the other, but at least I can start moving forward"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -126,42 +127,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrieve page with the requests module\n",
-    "response = requests.get(url)\n",
-    "# Create BeautifulSoup object; parse with 'lxml'\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')"
+    "# JPL Mars image\n",
+    "\n",
+    "jpl_url = (\"https://spaceimages-mars.com/\")\n",
+    "browser.visit(jpl_url)\n",
+    "\n",
+    "# Set up new instance of HTML object\n",
+    "html = browser.html\n",
+    "\n",
+    "# Parse the HTML with BeautifulSoup\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "ResultSet object has no attribute 'text'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-64-86c2132d3e6b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Ok, there is something wrong above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtitles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'div'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclass_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"content_title\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# article_teaser = soup.find('div', class_=\"article_teaser_body\").text\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtitles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/bs4/element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2159\u001b[0m         \u001b[0;34m\"\"\"Raise a helpful exception to explain a common code fix.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2160\u001b[0m         raise AttributeError(\n\u001b[0;32m-> 2161\u001b[0;31m             \u001b[0;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2162\u001b[0m         )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: ResultSet object has no attribute 'text'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
      ]
     }
    ],
    "source": [
-    "# Ok, there is something wrong above\n",
-    "titles = soup.find_all('div', class_=\"content_title\").text\n",
+    "# Gather featured_image_url\n",
+    "# img-card-top\n",
     "\n",
-    "# article_teaser = soup.find('div', class_=\"article_teaser_body\").text\n",
-    "print(titles)\n",
-    "# print(article_teaser)"
+    "img_url = soup.find('img', class_='headerimage fade in')\n",
+    "\n",
+    "\n",
+    "print(img_url)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://spaceimages-mars.com/image/featured/mars1.jpg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve page with the requests module\n",
+    "response = requests.get(jpl_url)\n",
+    "# Create BeautifulSoup object; parse with 'lxml'\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "# soup\n",
+    "\n",
+    "\n",
+    "# pull images from website\n",
+    "images = soup.find_all('a', class_=\"fancybox\")\n",
+    "#print(images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pic' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-34-89e2d1089261>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mpic_src\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mfeatured_image_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'https://www.jpl.nasa.gov'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mpic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mfeatured_image_url\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pic' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# pull image link\n",
+    "pic_src = []\n",
+    "for image in images:\n",
+    "    pic = image['data-fancybox-href']\n",
+    "    pic_src.append(pic)\n",
+    "\n",
+    "featured_image_url = 'https://www.jpl.nasa.gov' + pic\n",
+    "featured_image_url\n",
+    "\n",
+    "\n",
+    "\n",
+    "# <a target=\"_blank\" class=\"showimg fancybox-thumbs\" href=\"image/featured/mars3.jpg\"> \n",
+    "# <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Examine the results, then determine element that contains sought info\n",
+    "# results are returned as an iterable list\n",
+    "# results = soup.find_all('img', class_='headerimage')\n",
+    "\n",
+    "# Loop through returned results\n",
+    "for result in images:\n",
+    "    # Error handling\n",
+    "    try:\n",
+    "        # Identify and return title of listing\n",
+    "#         title = result.find('a', class_='title').text\n",
+    "        # Identify and return link to listing\n",
+    "        link = result.a['href']\n",
+    "\n",
+    "        # Run only if title, price, and link are available\n",
+    "        if (link):\n",
+    "            print(link)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
