Initial table is reading, yay

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -158,10 +158,10 @@
    ],
    "source": [
     "# Gather featured_image_url\n",
+    "# Yea, nothing is woring\n",
     "# img-card-top\n",
     "\n",
     "img_url = soup.find('img', class_='headerimage fade in')\n",
-    "\n",
     "\n",
     "print(img_url)"
    ]
@@ -174,6 +174,77 @@
    "source": [
     "https://spaceimages-mars.com/image/featured/mars1.jpg"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # pull image link\n",
+    "# pic_src = []\n",
+    "# for image in images:\n",
+    "#     pic = image['data-fancybox-href']\n",
+    "#     pic_src.append(pic)\n",
+    "\n",
+    "# featured_image_url = 'https://www.jpl.nasa.gov' + pic\n",
+    "# featured_image_url\n",
+    "\n",
+    "# <a target=\"_blank\" class=\"showimg fancybox-thumbs\" href=\"image/featured/mars3.jpg\"> \n",
+    "# <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mars Facts\n",
+    "https://galaxyfacts-mars.com/\n",
+    "\n",
+    "\n",
+    "Visit the Mars Facts webpage here and use Pandas to scrape the table containing facts about the planet including Diameter, Mass, etc.\n",
+    "\n",
+    "\n",
+    "Use Pandas to convert the data to a HTML table string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tables = pd.read_html(url)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -208,73 +279,6 @@
     "images = soup.find_all('a', class_=\"fancybox\")\n",
     "#print(images)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pic' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-89e2d1089261>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mpic_src\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mfeatured_image_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'https://www.jpl.nasa.gov'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mpic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mfeatured_image_url\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pic' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# pull image link\n",
-    "pic_src = []\n",
-    "for image in images:\n",
-    "    pic = image['data-fancybox-href']\n",
-    "    pic_src.append(pic)\n",
-    "\n",
-    "featured_image_url = 'https://www.jpl.nasa.gov' + pic\n",
-    "featured_image_url\n",
-    "\n",
-    "\n",
-    "\n",
-    "# <a target=\"_blank\" class=\"showimg fancybox-thumbs\" href=\"image/featured/mars3.jpg\"> \n",
-    "# <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Examine the results, then determine element that contains sought info\n",
-    "# results are returned as an iterable list\n",
-    "# results = soup.find_all('img', class_='headerimage')\n",
-    "\n",
-    "# Loop through returned results\n",
-    "for result in images:\n",
-    "    # Error handling\n",
-    "    try:\n",
-    "        # Identify and return title of listing\n",
-    "#         title = result.find('a', class_='title').text\n",
-    "        # Identify and return link to listing\n",
-    "        link = result.a['href']\n",
-    "\n",
-    "        # Run only if title, price, and link are available\n",
-    "        if (link):\n",
-    "            print(link)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
