--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -369,14 +369,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-59-d697812048d8>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-d697812048d8>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    img_url = soup.find('a', class_='showimg', 'href')\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
@@ -385,7 +386,7 @@
     "# Yea, nothing is woring\n",
     "# img-card-top\n",
     "\n",
-    "img_url = soup.find('href', class_='showimg')\n",
+    "img_url = soup.find('a', 'hclass_='showimg')\n",
     "\n",
     "print(img_url)"
    ]
