Got it, now to clean up image_url acquisition

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -369,16 +369,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (<ipython-input-59-d697812048d8>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-d697812048d8>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    img_url = soup.find('a', class_='showimg', 'href')\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<a class=\"showimg fancybox-thumbs\" href=\"image/featured/mars3.jpg\" target=\"_blank\"> <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'image/featured/mars3.jpg'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -386,9 +395,11 @@
     "# Yea, nothing is woring\n",
     "# img-card-top\n",
     "\n",
-    "img_url = soup.find('a', 'hclass_='showimg')\n",
+    "return = soup.find('a', class_='showimg')\n",
     "\n",
-    "print(img_url)"
+    "print(return)\n",
+    "\n",
+    "return['href']"
    ]
   },
   {
