--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -227,63 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<div class=\"item\">\n",
-       " <a class=\"itemLink product-item\" href=\"cerberus.html\"><img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/></a>\n",
-       " <div class=\"description\">\n",
-       " <a class=\"itemLink product-item\" href=\"cerberus.html\">\n",
-       " <h3>Cerberus Hemisphere Enhanced</h3>\n",
-       " </a>\n",
-       " <span class=\"subtitle\" style=\"float:left\">image/tiff 21 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
-       " <p>Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…</p>\n",
-       " </div>\n",
-       " <!-- end description -->\n",
-       " </div>,\n",
-       " <div class=\"item\">\n",
-       " <a class=\"itemLink product-item\" href=\"schiaparelli.html\"><img alt=\"Schiaparelli Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\"/></a>\n",
-       " <div class=\"description\">\n",
-       " <a class=\"itemLink product-item\" href=\"schiaparelli.html\">\n",
-       " <h3>Schiaparelli Hemisphere Enhanced</h3>\n",
-       " </a>\n",
-       " <span class=\"subtitle\" style=\"float:left\">image/tiff 35 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
-       " <p>Mosaic of the Schiaparelli hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The images were acquired in 1980 during early northern…</p>\n",
-       " </div>\n",
-       " <!-- end description -->\n",
-       " </div>,\n",
-       " <div class=\"item\">\n",
-       " <a class=\"itemLink product-item\" href=\"syrtis.html\"><img alt=\"Syrtis Major Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\"/></a>\n",
-       " <div class=\"description\">\n",
-       " <a class=\"itemLink product-item\" href=\"syrtis.html\">\n",
-       " <h3>Syrtis Major Hemisphere Enhanced</h3>\n",
-       " </a>\n",
-       " <span class=\"subtitle\" style=\"float:left\">image/tiff 25 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
-       " <p>Mosaic of the Syrtis Major hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of about 100 red and violet…</p>\n",
-       " </div>\n",
-       " <!-- end description -->\n",
-       " </div>,\n",
-       " <div class=\"item\">\n",
-       " <a class=\"itemLink product-item\" href=\"valles.html\"><img alt=\"Valles Marineris Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\"/></a>\n",
-       " <div class=\"description\">\n",
-       " <a class=\"itemLink product-item\" href=\"valles.html\">\n",
-       " <h3>Valles Marineris Hemisphere Enhanced</h3>\n",
-       " </a>\n",
-       " <span class=\"subtitle\" style=\"float:left\">image/tiff 27 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
-       " <p>Mosaic of the Valles Marineris hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The distance is 2500 kilometers from the surface of…</p>\n",
-       " </div>\n",
-       " <!-- end description -->\n",
-       " </div>]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Collect the image urls for the given website\n",
     "# Ok, this works to pull one. How to get the other three?\n",
@@ -297,441 +243,7 @@
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
     "responses = soup.find_all('div', class_='item')\n",
-    "responses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n",
-      "-----------\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Iterate through all pages\n",
-    "for x in range(5):\n",
-    "    # HTML object\n",
-    "    html = browser.html\n",
-    "    # Parse HTML with Beautiful Soup\n",
-    "    soup = BeautifulSoup(html, 'html.parser')\n",
-    "    # Retrieve all elements that contain image info\n",
-    "    images = soup.find_all('img', class_='thumb')\n",
-    "\n",
-    "    # Iterate through each book\n",
-    "    for image in images:\n",
-    "        # Use Beautiful Soup's find() method to navigate and retrieve attributes\n",
-    "        src = image.find('src')\n",
-    "#         link = h3.find('a')\n",
-    "#         href = link['href']\n",
-    "#         title = link['title']\n",
-    "        print('-----------')\n",
-    "        print(src)\n",
-    "#         print('http://books.toscrape.com/' + href)\n"
+    "# responses"
    ]
   },
   {
@@ -780,19 +292,17 @@
     "\n",
     "# Loop through the items previously stored\n",
     "for image in images: \n",
-    "    # Store title\n",
-    "#     title = image.find('h3').text\n",
     "    \n",
-    "    # Store link that leads to full image website\n",
+    "    # Grab link to image to set up nested browser.html \n",
     "    partial_img_url = image.find('a', class_='itemLink product-item')['href']\n",
     "    \n",
     "    # Visit the link that contains the full image website \n",
     "    browser.visit(main_url + partial_img_url)\n",
     "    \n",
-    "    # HTML Object of individual hemisphere information website \n",
+    "    # HTML Object for site visited in nest \n",
     "    partial_img_html = browser.html\n",
     "    \n",
-    "    # Parse HTML with Beautiful Soup for every individual hemisphere information website \n",
+    "    # Parse HTML with Beautiful Soup for every nested hemisphere information website \n",
     "    soup = BeautifulSoup(partial_img_html, 'html.parser')\n",
     "    \n",
     "    # Retrieve full image source \n",
@@ -838,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
